<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	
	<groupId>com.maziade.tools</groupId>
	<artifactId>cmdtoollib</artifactId>
	<packaging>jar</packaging>

	<version>0.0.1-SNAPSHOT</version>

	<name>Command-Line Tool Library</name>
	<description>Library to help kick-start spring-shell command-line tool helpers</description>
	<url>https://github.com/themaze75/cmdtoollib</url>
	
	<scm>
		<connection>scm:git:git@github.com:themaze75/cmdtoollib.git</connection>
		<developerConnection>scm:git:ssh://github.com:themaze75/cmdtoollib.git</developerConnection>
		<url>https://github.com/themaze75/cmdtoollib</url>
	</scm>
	
	 <developers>
		<developer>
			<name>Eric Maziade</name>
			<email>themaze75@gmail.com</email>
			<organization>Maziade</organization>
			<organizationUrl>https://github.com/themaze75</organizationUrl>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.compiler.release>17</maven.compiler.release>

		<spring-shell.version>3.1.3</spring-shell.version>
		<org.apache.commons-text.version>1.10.0</org.apache.commons-text.version>
		<org.jline.version>3.23.0</org.jline.version>
		<jna.version>5.13.0</jna.version>

		<org.junit.jupiter.version>5.9.2</org.junit.jupiter.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.shell</groupId>
			<artifactId>spring-shell-starter-jansi</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${org.apache.commons-text.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Adds ANSI support to consoles - even windows -->
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jline</artifactId>
			<version>${org.jline.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna -->
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>${jna.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-dependencies</artifactId>
				<version>${spring-shell.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version.source}</source>
					<target>${java.version.target}</target>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>--add-opens java.base/java.util=ALL-UNNAMED
								--add-opens java.base/java.io=ALL-UNNAMED
								--add-opens java.base/sun.nio.cs=ALL-UNNAMED</argLine>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.junit.jupiter</groupId>
							<artifactId>junit-jupiter-engine</artifactId>
							<version>${org.junit.jupiter.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>

</project>
